tests/neg/guard_div.ovt
sensor s : rate(int, (10, 0));
actuator a : rate(int, (10, 0));
a = s *^ 3;
